--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -54,8 +54,10 @@ body {
 }
 
 .load-more-btn {
-  display: none;
-  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 22px auto;
   font-family: 'Montserrat', sans-serif;
   background-color: #4e75ff;
   padding: 8px 16px;
